update path distr-system-rules

--- a/docs/distr-system-rules/sample.bib
+++ b/docs/distr-system-rules/sample.bib
@@ -2,7 +2,7 @@
 @article{tallor,
   author = {Jiacheng Li and Haibo Ding and Jingbo Shang and Julian Mcauley and Zhe Feng},
   title  = {Weakly Supervised Named Entity Tagging with Learnable Logical Rules},
-  year   = {2017}
+  year   = {2021}
 }
 @article{seman_lex,
   author = {Michael Thelen and Ellen Riloff},
@@ -18,6 +18,32 @@
   publisher = { MIT Press }
 }
 
+@article{Lison2020,
+  author    = {Pierre Lison and Aliaksandr Hubin and Jeremy Barnes and Samia Touileb},
+  doi       = {10.48550/arxiv.2004.14723},
+  month     = {4},
+  pages     = {1518-1533},
+  publisher = {Association for Computational Linguistics (ACL)},
+  title     = {Named Entity Recognition without Labelled Data: A Weak Supervision Approach},
+  url       = {https://arxiv.org/abs/2004.14723v1},
+  year      = {2020}
+}
+
+
+@article{Safranchik2020,
+  author   = {Esteban Safranchik and Shiying Luo and Stephen H. Bach},
+  doi      = {10.1609/aaai.v34i04.6009},
+  isbn     = {9781577358350},
+  issn     = {2159-5399},
+  issue    = {1},
+  journal  = {AAAI 2020 - 34th AAAI Conference on Artificial Intelligence},
+  keywords = {Machine Learning},
+  pages    = {5570-5578},
+  title    = {Weakly supervised sequence tagging from noisy rules},
+  year     = {2020}
+}
+
+
 @book{martin-2020-speech,
   title     = { Speech and Language Processing. An Introduction to Natural Language Processing,
                Computational Linguistics, and Speech Recognition },
@@ -26,6 +52,50 @@
   pages     = {148-170, 280-300},
   publisher = { Standord Press }
 }
+
+@article{Linder2020-Parallel,
+  author    = {Marek Linder and Ivan Sekaj},
+  doi       = {10.1145/3400031},
+  isbn      = {9788021443020},
+  issn      = {18033814},
+  journal   = {ACM Computing Surveys (CSUR)},
+  keywords  = {Parallelism,and learning,artificial intelligence,complex problem solving,genetic algorithms,last five years,new areas for search,optimization,time consuming applications},
+  month     = {8},
+  pages     = {9-15},
+  publisher = {
+               ACM
+               PUB27
+               New York, NY, USA
+               },
+  title     = {Parallel Genetic Algorithms},
+  url       = {https://dl.acm.org/doi/10.1145/3400031},
+  year      = {2020}
+}
+
+
+@article{Shang2018,
+  author    = {Jingbo Shang and Liyuan Liu and Xiaotao Gu and Xiang Ren and Teng Ren and Jiawei Han},
+  doi       = {10.48550/arxiv.1809.03599},
+  isbn      = {9781948087841},
+  journal   = {Proceedings of the 2018 Conference on Empirical Methods in Natural Language Processing, EMNLP 2018},
+  month     = {9},
+  pages     = {2054-2064},
+  publisher = {Association for Computational Linguistics},
+  title     = {Learning Named Entity Tagger using Domain-Specific Dictionary},
+  url       = {https://arxiv.org/abs/1809.03599v1},
+  year      = {2018}
+}
+
+
+@article{Fries2017,
+  author = {Jason Fries and Sen Wu and Alex Ratner and Christopher Ré},
+  doi    = {10.48550/arxiv.1704.06360},
+  month  = {4},
+  title  = {SwellShark: A Generative Model for Biomedical Named Entity Recognition without Labeled Data},
+  url    = {https://arxiv.org/abs/1704.06360v1},
+  year   = {2017}
+}
+
 
 @book{eiben-2015-speech,
   title     = { Introduction to EvolutionaryComputing },
